security: fix password exposure in API responses
- Add @JsonIgnore annotation to User.senha field to prevent password leakage
- Update UserController to return UserResponseDTO instead of User entities
- Add helper methods in UserService to convert entities to DTOs:
  - convertToResponseDTO()
  - findByIdAsDTO()
  - findAllAsDTO()
  - findAllActiveAsDTO()
  - toggleStatusAsDTO()
- Ensure no sensitive data is exposed in API responses
- Remove unused imports in UserController

Security improvements:
- Passwords are no longer visible in F12 network responses
- All user endpoints now return safe DTOs without sensitive fields
- Maintains backwards compatibility with frontend applications

--- a/maiconsoft_api/.env.example
+++ b/maiconsoft_api/.env.example
@@ -11,6 +11,12 @@ SUPABASE_USERNAME=postgres
 SUPABASE_PASSWORD=SUA_SENHA_SUPABASE
 
 # ===============================
+# FILE UPLOAD CONFIGURATION
+# ===============================
+# Diretório para armazenar uploads (relativo ao projeto)
+APP_UPLOAD_DIRECTORY=./uploads
+
+# ===============================
 # EMAIL CONFIGURATION (OPCIONAL)
 # ===============================
 SMTP_HOST=smtp.gmail.com
