feat: Implementar configurações Docker duplas para casa e faculdade
- Adicionar docker-compose.supabase.yml para uso em casa (Supabase)
- Adicionar docker-compose.local.yml para uso na faculdade (PostgreSQL local)
- Criar scripts automatizados:
  * docker-casa.bat - Executa configuração Supabase
  * docker-faculdade.bat - Executa configuração PostgreSQL local
- Adicionar documentação completa:
  * DOCKER-README.md atualizado com duas configurações
  * DOCKER-RAPIDO.md como guia rápido
- Criar scripts de diagnóstico e solução para problemas Windows:
  * docker-diagnostico-windows.bat
  * resolver-docker-windows.bat
  * windows-docker-fix.bat
- Configurar PostgreSQL local com dados iniciais
- Suporte completo offline na faculdade e online em casa

--- a/docker-compose-ipv6.yml
+++ b/docker-compose-ipv6.yml
@@ -26,7 +26,7 @@ services:
       # ===============================
       # SUPABASE DATABASE
       # ===============================
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db.hmjldrzvmaqgetjcepay.supabase.co:5432/postgres?sslmode=require
+      SPRING_DATASOURCE_URL: jdbc:postgresql://[2600:1f1e:75b:4b03:c516:ce6f:d367:7a88]:5432/postgres?sslmode=require
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: ${SUPABASE_PASSWORD}
       SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
