--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,9 +1,12 @@
 ﻿# ===============================
 # MAICONSOFT - DOCKER COMPOSE
-# PostgreSQL Database Local
+# Full Stack: PostgreSQL + Backend + Frontend
 # ===============================
 
 services:
+  # ===============================
+  # DATABASE - POSTGRESQL
+  # ===============================
   postgres:
     image: postgres:15-alpine
     container_name: maiconsoft-postgres
@@ -16,12 +19,80 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - maiconsoft-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
 
+  # ===============================
+  # BACKEND - SPRING BOOT API
+  # ===============================
+  backend:
+    build:
+      context: ../maiconsoft_api
+      dockerfile: Dockerfile
+    container_name: maiconsoft-backend
+    restart: unless-stopped
+    ports:
+      - "8090:8090"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/maiconsoft
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres123
+    volumes:
+      - backend_uploads:/app/uploads
+      - backend_logs:/app/logs
+    networks:
+      - maiconsoft-network
+    depends_on:
+      postgres:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8090 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 90s
+
+  # ===============================
+  # FRONTEND - NGINX
+  # ===============================
+  frontend:
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    container_name: maiconsoft-frontend
+    restart: unless-stopped
+    ports:
+      - "3000:80"  # Acesso: http://localhost:3000
+    networks:
+      - maiconsoft-network
+    depends_on:
+      - backend
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:80 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 15s
+
+# ===============================
+# VOLUMES
+# ===============================
 volumes:
   postgres_data:
     driver: local
+  backend_uploads:
+    driver: local
+  backend_logs:
+    driver: local
+
+# ===============================
+# NETWORKS
+# ===============================
+networks:
+  maiconsoft-network:
+    driver: bridge
