fix: remove BOM from nginx.conf and use postgres hostname for Docker environment

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,4 +1,4 @@
-﻿server {
+server {
     listen 80;
     server_name localhost;
     
@@ -9,18 +9,18 @@
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    # Configuração para arquivos estáticos
+    # Configura??o para arquivos est?ticos
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache para arquivos estáticos
+    # Cache para arquivos est?ticos
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg)$ {
         expires 1d;
         add_header Cache-Control "public, immutable";
     }
 
-    # Proxy para API (opcional, caso queira acessar API pelo mesmo domínio)
+    # Proxy para API (opcional, caso queira acessar API pelo mesmo dom?nio)
     location /api/ {
         proxy_pass http://backend:8090/api/;
         proxy_http_version 1.1;
