--- a/maiconsoft_api/src/main/resources/application.properties
+++ b/maiconsoft_api/src/main/resources/application.properties
@@ -4,12 +4,13 @@
 spring.application.name=maiconsoft_api
 
 # ===============================
-# DATABASE - POSTGRESQL LOCAL (DOCKER)
+# DATABASE - POSTGRESQL (DOCKER)
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/maiconsoft
+# Use 'postgres' when running in Docker, 'localhost' when running locally
+spring.datasource.url=jdbc:postgresql://${DB_HOST:postgres}:5432/maiconsoft
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=postgres123
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres123}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
@@ -21,9 +22,9 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.validate-on-migrate=false
-spring.flyway.url=jdbc:postgresql://localhost:5432/maiconsoft
-spring.flyway.user=postgres
-spring.flyway.password=postgres123
+spring.flyway.url=jdbc:postgresql://${DB_HOST:postgres}:5432/maiconsoft
+spring.flyway.user=${DB_USER:postgres}
+spring.flyway.password=${DB_PASSWORD:postgres123}
 
 # ===============================
 # SERVER CONFIGURATION
